--- a/vimwiki/学习笔记/Android/画面位置旋转效果.wiki
+++ b/vimwiki/学习笔记/Android/画面位置旋转效果.wiki
@@ -45,6 +45,16 @@ import android.view.animation.AnimationUtils;
 </set>
 }}}
 
+=== 使用XML动画效果 ===
+{{{class="brush:java"
+// 加载XML资源
+Animation mAnim = AnimationUtils.loadAnimation(context, R.anim.rotate);
+// 获取动画对象
+ViewGroup view = (ViewGroup) findViewById(R.id.container);
+// 开始动画
+view.startAnimation(mAnim);
+}}}
+
 === 在JAVA代码中定义 ===
 {{{class="brush:java"
 //第一个参数fromDegrees为动画起始时的旋转角度   
