--- a/vimwiki/学习笔记/Android/绘图的特殊效果.wiki
+++ b/vimwiki/学习笔记/Android/绘图的特殊效果.wiki
@@ -2,8 +2,7 @@
 
 %toc
 
-- 使用BlurMaskFilter类实现绘画的特殊效果
-
+== BlurMaskFilter ==
 {{{class="brush:java"
 private Bitmap drawImageDropShadow(Bitmap originalBitmap) {
     BlurMaskFilter blurFilter = new BlurMaskFilter(1, BlurMaskFilter.Blur.NORMAL);
