--- a/vimwiki/学习笔记/Android/单选和多选菜单.wiki
+++ b/vimwiki/学习笔记/Android/单选和多选菜单.wiki
@@ -1,6 +1,6 @@
 = 单选和多选菜单 =
 
-例程源码(XML)
+== 例程源码(XML) ==
 {{{class="brush:xml"
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
