--- a/vimwiki/学习笔记/Python/内置数据类型.wiki
+++ b/vimwiki/学习笔记/Python/内置数据类型.wiki
@@ -5,6 +5,7 @@
 == List使用 ==
 === 切片 ===
 - 切片以`0`为开始索引，`-1`为末尾的索引。
+- [start:end]的切片形式表示从`start`索引开始，不包含`end`索引结束的区间。
 
 {{{class="brush:python"
 >>> a_list 
@@ -50,7 +51,7 @@
 }}}
 
 === 映射List ===
-- 可以在`[]`进行遍历和条件判断的操作
+- 可以在`[]`内部进行元素遍历和条件判断的操作，操作后结果仍然是一个List
 
 {{{class="brush:python"
 >>> a = [1, 2, 3, 4]
@@ -87,7 +88,7 @@
 }}}
 
 === Dict格式化字符串 ===
-- 格式为`(key)s % {key:value...}`，括号里面的`key没有引号`，并且`括号后面需要加s`。
+- 格式为`"%(key)s" % {key:value...}`，括号里面的`key没有引号`，并且`括号后面需要加s`。
  
 {{{class="brush:python"
 # 使用Dict格式化
