Force commit by sync_github.sh

--- a/vimwiki/学习笔记/Android/Android APP.wiki
+++ b/vimwiki/学习笔记/Android/Android APP.wiki
@@ -36,8 +36,7 @@
     - [[控件集合]]
     - [[对话框集合]]
     - [[菜单集合]]
-    - [[切换器]]
-    - [[自定义控件属性]]
+    - [[自定义控件属性]]    ------ 主题、风格和属性
 === 消息和数据 ===
     - [[数据存储]]
     - [[定时器]]
