--- a/vimwiki/学习笔记/Android/使用selector控制焦点和状态.wiki
+++ b/vimwiki/学习笔记/Android/使用selector控制焦点和状态.wiki
@@ -8,28 +8,28 @@
 {{{class="brush:xml"
 <?xml version="1.0" encoding="utf-8" ?>
     <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-        <!!-- 获得焦点时 -->
+        <!-- 获得焦点时 -->
         <item
             android:state_focused="true"
             android:state_pressed="false"
             android:drawable="@drawable/onfocusimage"
         />
         
-        <!!-- 获得焦点并按下 -->
+        <!-- 获得焦点并按下 -->
         <item
         android:state_focused="true"
         android:state_pressed="true"
         android:drawable="@drawable/clickimage"
         />
         
-        <!!-- 失去焦点时 -->
+        <!-- 失去焦点时 -->
         <item
         android:state_focused="false"
         android:state_pressed="true"
         android:drawable="@drawable/clickimage"
         />
         
-        <!!-- 默认背景 -->
+        <!-- 默认背景 -->
         <item android:drawable="@drawable/defaultimage" />
 </selector>
 }}}
@@ -40,7 +40,7 @@
     android:id="@+id/image_Button"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    <!!-- 加入advancebutton -->
+    <!-- 加入advancebutton -->
     android:background="@drawable/advancedbutton"
 />
 }}}
