--- a/vimwiki/学习笔记/Debian/Gerrit.wiki
+++ b/vimwiki/学习笔记/Debian/Gerrit.wiki
@@ -172,6 +172,10 @@ $ git clone https://Zenki.J.Zha@127.0.0.1:8080/Gerrit_project_test.git
 {{{class="brush:bash"
 $ git config remote.origin.push refs/heads/*:refs/for/*
 $ git push origin
+# 或者
+$ git push origin HEAD:refs/for/master
+
+# 成功的信息
 Counting objects: 3, done.
 Writing objects: 100% (3/3), 217 bytes, done.
 Total 3 (delta 0), reused 0 (delta 0)
